Murphy System/archive/artifacts/outputs/workspace_output_1769719268_2183.txt
  File "/workspace/murphy_complete_integrated.py", line 1876
    global communication_hub
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'communication_hub' is assigned to before global declaration
